tests/baselines/reference/publicIndexer.errors.txt
==== tests/cases/compiler/publicIndexer.ts (3 errors) ====
    // public indexers not allowed
    
    class C {
        public [x: string]: string;
        ~~~~~~
!!! error TS1055: Modifiers cannot appear here.
    }
    
    class D {
        public [x: number]: string;
        ~~~~~~
!!! error TS1055: Modifiers cannot appear here.
    }
    
    class E<T> {
        public [x: string]: T;
        ~~~~~~
!!! error TS1055: Modifiers cannot appear here.
    }